# django-task4

./: db.sqlite3  pyproject.toml
api/: models.py  permissions.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py
task4/: settings.py  urls.py
