[tool.poetry]
name = "task4"
version = "0.1.0"
description = ""
authors = ["Ahmed Salah <ahmed_abdelsamie@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.1.2"
drf-yasg = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
