[tool.poetry]
name = "task4"
version = "0.1.0"
description = ""
authors = ["Ahmed Salah <ahmed_abdelsamie@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.1.2"
drf-yasg = "^1.21.4"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
